standards/gnds-2.0/try/c/src/v2.0/fissionTransport/TotalEnergy.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ comment
// Constructs you're LESS likely to care about are preceded with:
//    // --- comment
// Anything not marked as above can be ignored by most users.
//
// TotalEnergy is the basic handle type in this file. Example:
//    // Create a default TotalEnergy object:
//    TotalEnergy handle = TotalEnergyDefault();
// Functions involving TotalEnergy are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_TRY_V2_0_FISSIONTRANSPORT_TOTALENERGY
#define C_INTERFACE_TRY_V2_0_FISSIONTRANSPORT_TOTALENERGY

#include "GNDStk.h"
#include "v2.0/containers/Polynomial1d.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct TotalEnergyClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ TotalEnergy
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct TotalEnergyClass *TotalEnergy;

// --- Const-aware handles.
typedef const struct TotalEnergyClass *const ConstHandle2ConstTotalEnergy;
typedef       struct TotalEnergyClass *const ConstHandle2TotalEnergy;
typedef const struct TotalEnergyClass *      Handle2ConstTotalEnergy;
typedef       struct TotalEnergyClass *      Handle2TotalEnergy;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstTotalEnergy
TotalEnergyDefaultConst();

// +++ Create, default
extern_c Handle2TotalEnergy
TotalEnergyDefault();

// --- Create, general, const
extern_c Handle2ConstTotalEnergy
TotalEnergyCreateConst(
   ConstHandle2ConstPolynomial1d polynomial1d
);

// +++ Create, general
extern_c Handle2TotalEnergy
TotalEnergyCreate(
   ConstHandle2ConstPolynomial1d polynomial1d
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
TotalEnergyAssign(ConstHandle2TotalEnergy This, ConstHandle2ConstTotalEnergy from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
TotalEnergyDelete(ConstHandle2ConstTotalEnergy This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
TotalEnergyRead(ConstHandle2TotalEnergy This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
TotalEnergyWrite(ConstHandle2ConstTotalEnergy This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
TotalEnergyPrint(ConstHandle2ConstTotalEnergy This);

// +++ Print to standard output, as XML
extern_c int
TotalEnergyPrintXML(ConstHandle2ConstTotalEnergy This);

// +++ Print to standard output, as JSON
extern_c int
TotalEnergyPrintJSON(ConstHandle2ConstTotalEnergy This);


// -----------------------------------------------------------------------------
// Child: polynomial1d
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
TotalEnergyPolynomial1dHas(ConstHandle2ConstTotalEnergy This);

// --- Get, const
extern_c Handle2ConstPolynomial1d
TotalEnergyPolynomial1dGetConst(ConstHandle2ConstTotalEnergy This);

// +++ Get, non-const
extern_c Handle2Polynomial1d
TotalEnergyPolynomial1dGet(ConstHandle2TotalEnergy This);

// +++ Set
extern_c void
TotalEnergyPolynomial1dSet(ConstHandle2TotalEnergy This, ConstHandle2ConstPolynomial1d polynomial1d);


// -----------------------------------------------------------------------------
// Done
// -----------------------------------------------------------------------------

#undef extern_c
#endif